Remove all the non-G, M, A matches. The 2014 accuracy is now 0.696, which matches the Kovalchik paper.

--- a/tennis/elo.ipynb
+++ b/tennis/elo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "start_year = 1968 # 1968\n",
-    "end_year = 2014\n",
+    "end_year = 2018  # The Kovalchik paper ends in 2014.\n",
     "base_dir = r\"C:/Users/Paul/tennis_atp\"\n",
     "filename_label = r\"atp_matches_%d.csv\"\n",
     "\n",
@@ -39,107 +39,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:/Users/Paul/tennis_atp\\atp_matches_1968.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1968.csv:  (1232, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1969.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1969.csv:  (1451, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1970.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1970.csv:  (1681, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1971.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1971.csv:  (2712, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1972.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1972.csv:  (2934, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1973.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1973.csv:  (3837, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1974.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1974.csv:  (3899, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1975.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1975.csv:  (4038, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1976.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1976.csv:  (3871, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1977.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1977.csv:  (4046, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1978.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1978.csv:  (3851, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1979.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1979.csv:  (4003, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1980.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1980.csv:  (3955, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1981.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1981.csv:  (3835, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1982.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1982.csv:  (4105, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1983.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1983.csv:  (3557, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1984.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1984.csv:  (3222, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1985.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1985.csv:  (3395, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1986.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1986.csv:  (3251, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1987.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1987.csv:  (3488, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1988.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1988.csv:  (3733, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1989.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1989.csv:  (3583, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1990.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1990.csv:  (3321, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1991.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1991.csv:  (3727, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1992.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1992.csv:  (3792, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1993.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1993.csv:  (3890, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1994.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1994.csv:  (3938, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1995.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1995.csv:  (3800, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1996.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1996.csv:  (3771, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1997.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1997.csv:  (3623, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1998.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1998.csv:  (3589, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_1999.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_1999.csv:  (3327, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2000.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_2000.csv:  (3364, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2001.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_2001.csv:  (3307, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2002.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_2002.csv:  (3236, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2003.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_2003.csv:  (3214, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2004.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_2004.csv:  (3277, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2005.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_2005.csv:  (3257, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2006.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_2006.csv:  (3257, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2007.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_2007.csv:  (3152, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2008.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_2008.csv:  (3110, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2009.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_2009.csv:  (3074, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2010.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_2010.csv:  (3058, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2011.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_2011.csv:  (3030, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2012.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_2012.csv:  (3025, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2013.csv\n",
       "C:/Users/Paul/tennis_atp\\atp_matches_2013.csv:  (2959, 10)\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2014.csv\n",
-      "C:/Users/Paul/tennis_atp\\atp_matches_2014.csv:  (2901, 10)\n"
+      "C:/Users/Paul/tennis_atp\\atp_matches_2014.csv:  (2901, 10)\n",
+      "C:/Users/Paul/tennis_atp\\atp_matches_2015.csv:  (2958, 10)\n",
+      "C:/Users/Paul/tennis_atp\\atp_matches_2016.csv:  (2941, 10)\n",
+      "C:/Users/Paul/tennis_atp\\atp_matches_2017.csv:  (2886, 10)\n",
+      "C:/Users/Paul/tennis_atp\\atp_matches_2018.csv:  (1416, 10)\n"
      ]
     }
    ],
@@ -151,7 +108,7 @@
     "    df_year = pd.read_csv(filename)\n",
     "    df_year = process_year_df(df_year)\n",
     "#     df_year = df_year.loc[df_year['tourney_name'] == 'Montpellier']\n",
-    "    print(filename)\n",
+    "#     print(filename)\n",
     "#     print(df_year[0:300])\n",
     "    \n",
     "    print(\"%s: \" % filename, df_year.shape)\n",
@@ -164,7 +121,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['G' 'A' 'D' 'M' 'F' 'C']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.tourney_level.unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,8 +152,7 @@
     "use_fte_K = True\n",
     "remove_walkovers = True\n",
     "remove_retirements = True\n",
-    "remove_davis_cup = True\n",
-    "remove_tour_finals = True\n",
+    "tourney_levels = ['G', 'M', 'A']\n",
     "\n",
     "if use_fte_K:\n",
     "    def get_K(n_matches):\n",
@@ -206,12 +179,8 @@
     "\n",
     "for index, row in df.iterrows():\n",
     "\n",
-    "    if remove_davis_cup:\n",
-    "        if row['tourney_level'] == 'D':\n",
-    "            continue\n",
-    "    if remove_tour_finals:\n",
-    "        if row['tourney_level'] == 'F':\n",
-    "            continue\n",
+    "    if row['tourney_level'] not in tourney_levels:\n",
+    "        continue\n",
     "    \n",
     "    if remove_walkovers:\n",
     "        if pd.isna(row['score']) or 'W/O' in row['score']:\n",
@@ -270,15 +239,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted 1662 / 2395 = 0.694 correct predictions\n",
-      "482 grand slams, 549 masters:\n"
+      "Predicted 762 / 1199 = 0.636 correct predictions\n",
+      "123 grand slams, 347 masters:\n"
      ]
     }
    ],
@@ -290,87 +259,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20130000\n",
-      "Removing player 106325, latest date 20121231\n"
+      "20170000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<bound method NDFrame.head of              rating\n",
-       "104925  2258.531000\n",
-       "103819  2132.365566\n",
-       "104745  2037.331055\n",
-       "105453  2030.504211\n",
-       "104918  2028.958259\n",
-       "105227  1917.143870\n",
-       "104792  1911.554289\n",
-       "105223  1910.832468\n",
-       "105683  1910.551554\n",
-       "105777  1910.328403\n",
-       "103970  1881.226405\n",
-       "104527  1879.237916\n",
-       "104607  1878.255298\n",
-       "104542  1842.431952\n",
-       "103990  1820.090543\n",
-       "105676  1816.181572\n",
-       "105138  1815.054143\n",
-       "105985  1783.511246\n",
-       "103852  1769.656681\n",
-       "104468  1767.021359\n",
-       "104731  1763.673038\n",
-       "104755  1760.211676\n",
-       "104545  1750.779435\n",
-       "104597  1734.087623\n",
-       "106401  1728.525283\n",
-       "105023  1727.405394\n",
-       "104678  1725.034381\n",
-       "105208  1724.551263\n",
-       "103898  1724.397741\n",
-       "104259  1716.990179\n",
-       "...             ...\n",
-       "105902  1344.359100\n",
-       "104905  1341.867732\n",
-       "105436  1339.471852\n",
-       "103722  1335.890002\n",
-       "105614  1335.199280\n",
-       "104251  1333.264400\n",
-       "105441  1329.800928\n",
-       "111167  1326.402385\n",
-       "105051  1325.224944\n",
-       "123997  1324.223614\n",
-       "125572  1323.128831\n",
-       "106105  1321.509945\n",
-       "111781  1319.083072\n",
-       "105099  1317.893105\n",
-       "126340  1317.393418\n",
-       "106378  1313.868609\n",
-       "104262  1302.601689\n",
-       "104619  1299.551130\n",
-       "106309  1296.747123\n",
-       "103105  1292.147760\n",
-       "105738  1282.506020\n",
-       "106035  1281.541844\n",
-       "105589  1279.905691\n",
-       "105413  1278.156114\n",
-       "104714  1276.065649\n",
-       "103843  1275.847187\n",
-       "104947  1270.999011\n",
-       "105812  1255.035787\n",
-       "106032  1233.468694\n",
-       "103835  1231.516098\n",
+       "<bound method NDFrame.head of                                   rating\n",
+       "Roger Federer                2331.367268\n",
+       "Rafael Nadal                 2303.170820\n",
+       "Novak Djokovic               2295.163544\n",
+       "Andy Murray                  2285.677671\n",
+       "Juan Martin Del Potro        2174.431072\n",
+       "Alexander Zverev             2159.239377\n",
+       "Kei Nishikori                2133.182952\n",
+       "Nick Kyrgios                 2086.791775\n",
+       "Jo Wilfried Tsonga           2063.618241\n",
+       "Milos Raonic                 2060.191096\n",
+       "Dominic Thiem                2058.397403\n",
+       "Grigor Dimitrov              2050.180493\n",
+       "David Goffin                 2035.444391\n",
+       "Stanislas Wawrinka           2034.865399\n",
+       "Marin Cilic                  2023.149848\n",
+       "Tomas Berdych                2001.860219\n",
+       "Kevin Anderson               1991.954081\n",
+       "Borna Coric                  1974.660830\n",
+       "Roberto Bautista Agut        1969.074225\n",
+       "Gael Monfils                 1966.598511\n",
+       "Kyle Edmund                  1965.027031\n",
+       "Hyeon Chung                  1964.850076\n",
+       "Denis Shapovalov             1963.117994\n",
+       "Philipp Kohlschreiber        1960.344578\n",
+       "Richard Gasquet              1955.785695\n",
+       "Pablo Carreno Busta          1938.691223\n",
+       "John Isner                   1932.338429\n",
+       "Fabio Fognini                1931.089989\n",
+       "Diego Sebastian Schwartzman  1913.148595\n",
+       "David Ferrer                 1906.194321\n",
+       "...                                  ...\n",
+       "Riccardo Bellotti            1445.660807\n",
+       "Alexei Popyrin               1444.604971\n",
+       "Artem Sitak                  1442.714389\n",
+       "Yibing Wu                    1442.362593\n",
+       "Lorenzo Giustino             1441.820770\n",
+       "Sumit Nagal                  1440.899508\n",
+       "Jose Hernandez               1439.372515\n",
+       "Marc Polmans                 1439.215493\n",
+       "Konstantin Kravchuk          1437.366599\n",
+       "Michael Venus                1436.581267\n",
+       "Dimitar Kuzmanov             1436.106559\n",
+       "Alexander Ward               1434.763350\n",
+       "Akira Santillan              1433.712135\n",
+       "Daniel Masur                 1432.804434\n",
+       "Patrick Kypson               1431.772429\n",
+       "Gregoire Barrere             1428.102249\n",
+       "Jordi Samper Montana         1426.010248\n",
+       "Antoine Bellier              1423.352277\n",
+       "Aldin Setkic                 1422.043431\n",
+       "Kimmer Coppejans             1409.637181\n",
+       "Jonathan Eysseric            1405.380544\n",
+       "Manuel Sanchez               1404.655186\n",
+       "Mackenzie Mcdonald           1400.183163\n",
+       "Guilherme Clezar             1397.545154\n",
+       "Agustin Velotti              1395.555839\n",
+       "Alex Bolt                    1389.943880\n",
+       "Omar Awadhy                  1386.742793\n",
+       "Laurent Lokoli               1385.080496\n",
+       "Jabor Al Mutawa              1369.681316\n",
+       "Cem Ilkel                    1356.960013\n",
        "\n",
-       "[582 rows x 1 columns]>"
+       "[346 rows x 1 columns]>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,8 +349,11 @@
     "print(cutoff_date)\n",
     "for p in latest_tourney_date.keys():\n",
     "    if latest_tourney_date[p] < cutoff_date:\n",
-    "        del elo_ratings[p]\n",
-    "        print(\"Removing player %s, latest date %s\" % (p, latest_tourney_date[p]))\n",
+    "        try:\n",
+    "            del elo_ratings[p]\n",
+    "#             print(\"Removing player %s, latest date %s\" % (p, latest_tourney_date[p]))\n",
+    "        except:\n",
+    "            pass\n",
     "\n",
     "df_elo_ratings = pd.DataFrame.from_dict(elo_ratings, orient='index')\n",
     "df_elo_ratings.columns = ['rating']\n",
